feat: update description and improve docs and move_system logic
The description now clarifies the library's focus on bevy_ecs, and the README has been expanded with usage, features, and testing instructions. The `move_system` logic was corrected to use velocity components instead of fixed increments, and documentation in `lib.rs` was refined. Test code was cleaned up for better clarity and correctness.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "open-entities"
 version = "0.1.0"
 edition = "2021"
-description = "A library for working with entities"
+description = "A library for working with entities using the bevy_ecs framework"
 license = "MIT"
 authors = ["OpenEntities Contributors"]
 
