feat: add integration tests and improve crate documentation with examples
This commit adds a new integration test suite and enhances the crate's documentation by including a clear example showing how to set up and run a basic app using the `open_entities` crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ authors = ["OpenEntities Contributors"]
 bevy_ecs = "0.14"
 bevy_app = "0.14"
 
+[[test]]
+name = "integration_tests"
+path = "tests/integration_tests.rs"
+
 [lib]
 name = "open_entities"
 path = "src/lib.rs"
