feat: add YAML serialization support for spawning entities
Add serde and serde_yaml dependencies to enable loading ECS entities from YAML configuration files. Components (Position, Unit, Vehicle, Velocity) derive Deserialize trait, and new yaml module provides functions to spawn entities from YAML.

--- a/open-entities-lib/Cargo.toml
+++ b/open-entities-lib/Cargo.toml
@@ -9,6 +9,8 @@ authors = ["OpenEntities Contributors"]
 [dependencies]
 bevy_ecs = "0.14"
 bevy_app = "0.14"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
 
 [lib]
 name = "open_entities"
